* Sun Feb  4 2024 sandix@universal-logging-system.org
  new functions %replacequoted and %unreplace
* Sun Jan 28 2024 sandix@universal-logging-system.org
  new function %calc(<str>)
* Sat Jan 13 2024 sandix@universal-logging-system.org
  on u2w_interpreter send stderr while calling shell comands via ` or #
* Sun Jul 30 2023 sandix@universal-logging-system.org
  bugfix: %substring on empty strings
* Sun Apr  2 2023 sandix@universal-logging-system.org
  enable nested %switch
  Bugfix: on dividing by zero the result is NaN
* Fri Feb 24 2023 sandix@universal-logging-system.org
  Bugfix: start without IP-V6 if IP-V6 isn't supported
* Sat Dec 17 2022 sandix@universal-logging-system.org
  new: -Hp  don't send programname and version in HTTP-header
* Tue Dec  6 2022 sandix@universal-logging-system.org
  new: -lC <path>  write detailed connectionlog into <path>
       -lF <format>  format for connectionlog
* Sun Oct  9 2022 sandix@universal-logging-system.org
- unix2webd: new switch -F / -Fh - send chunk after html / http Header
* Tue Oct  4 2022 sandix@universal-logging-system.org
- u2w_calc: calculation uses short-circuit evaluation for 0 *, true ||, false && and <exp> ? <exp> : <exp>
* Mon Sep 26 2022 sandix@universal-logging-system.org
- bugfix: delete pidfile on SIGTERM
- bugfix: open and write "pidfile" as changed user
* Sun Sep 11 2022 sandix@universal-logging-system.org
- gettext: fixed quoting
- .hosts file: added support for IP-V6
* Sat Sep 10 2022 sandix@universal-logging-system.org
- makepackage: new switch -B -d
* Sun Aug 28 2022 sandix@universal-logging-system.org
- New "%https"
* Sun Apr 10 2022 sandix@universal-logging-system.org
- MariaDB / MySQL added code to accept multiple statements
* Sat May  1 2021 sandix@universal-logging-system.org
- Bugfix: %text(...) in Tables
* Sun Mar 14 2021 sandix@universal-logging-system.org
- new: %iframe
* Fri Feb 26 2021 sandix@universal-logging-system.org
- httpget: added support for SIGTERM