@@ -1,3 +1,5 @@
+* Fri Mar 29 2024 sandix@universal-logging-system.org
+  new: -Ff - flush before %parameter
 * Sun Feb  4 2024 sandix@universal-logging-system.org
   new functions %replacequoted and %unreplace
 * Sun Jan 28 2024 sandix@universal-logging-system.org
